fix: sp menu overflow scroll

--- a/components/common/SiteHeaderNavigation/SiteHeaderNavigation.module.css
+++ b/components/common/SiteHeaderNavigation/SiteHeaderNavigation.module.css
@@ -5,6 +5,7 @@
 .menuListWrapper {
   @screen less-than-md {
     &.hasShownMenuForMobile {
+      -webkit-overflow-scrolling: touch;
       --header-height: calc(60px - theme('borderWidth.DEFAULT') * 2);
       @apply fixed z-10 top-0 bottom-0 left-0 right-0 bg-white flex flex-col border border-green;
       padding-top: var(--header-height);
